# ansible-tutorial

./: .gitignore  README.md  ansible.cfg  galaxy.yml  pyproject.toml
docs/: helper.md
inventory/: build.yml
playbooks/: sample_inventory_playbook.yml
plugins/inventory/: external_host_inventory.py
roles/sample_inventory_role/tasks/: main.yml
